--- a/build.xml
+++ b/build.xml
@@ -16,7 +16,7 @@
    See the License for the specific language governing permissions and
    limitations under the License.                                                            
 -->
-<?xml version="1.0"?>
+<?xml version="1.0" encoding="UTF-8"?>
 
 <project name="testBuild" default="buildDeployTest" basedir="." >
         <!-- project.properties -->
